Generate Pelican site

--- a/es/noticia5.html
+++ b/es/noticia5.html
@@ -97,7 +97,7 @@
   
 		<!-- Item introtext -->
 		<div class="texto_noticia">
-		 <p>Hace más de veinticinco años, el <a href="#">fotógrafo Gervasio Sánchez</a> comenzó a documentar los efectos de las minas antipersona en la población de lugares con conflictos bélicos. Se trata de un trabajo periodístico que ha ido desarrollando durante un cuarto de siglo, adentrándose con empatía en las vidas de sus protagonistas. El resultado es el libro 'Vidas minadas. 25 años', obra que se presentó en la UCO y que vendrá rubricada con una exposición en 2025. </p>
+		 <p>hola</p>
 	  </div>
     <div class="InfoAdd">
       <h3>INFORMACIÓN ADICIONAL</h3>
@@ -114,7 +114,7 @@
         <a href="mailto:?subject="#LaUCOenAbierto I Luz de las vidas minadas"&body=Echale un vistazo a la siguiente noticia: https://davidvm29.github.io/pelican/es/noticia5.html" title="Compartir en Email" class="icono-compartir"><i class="fas fa-envelope"></i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://davidvm29.github.io/pelican/es/noticia5.html" title="Compartir en Facebook" target="_blank" class="icono-compartir"><i class="fab fa-facebook-f"></i></a>
         <a href="https://twitter.com/intent/tweet?url=https://davidvm29.github.io/pelican/es/noticia5.html&text="#LaUCOenAbierto I Luz de las vidas minadas"" title="Compartir en Twitter" target="_blank" class="icono-compartir"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://davidvm29.github.io/pelican/es/noticia5.html&title="#LaUCOenAbierto I Luz de las vidas minadas"&summary=<p>Hace más de veinticinco años, el <a href="#">fotógrafo Gervasio Sánchez</a> comenzó a documentar los efectos de las minas antipersona en la población de lugares con conflictos bélicos. Se trata de un trabajo periodístico que ha ido desarrollando durante un cuarto de siglo, adentrándose con empatía en las vidas de sus protagonistas …</p>&source=Mi Sitio" title="Compartir en LinkedIn" target="_blank" class="icono-compartir"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://davidvm29.github.io/pelican/es/noticia5.html&title="#LaUCOenAbierto I Luz de las vidas minadas"&summary=<p>hola</p>&source=Mi Sitio" title="Compartir en LinkedIn" target="_blank" class="icono-compartir"><i class="fab fa-linkedin-in"></i></a>
       </div>
 
   <div style="margin-bottom: 20px;"class="hastag">
