--- a/en/drafts/noticia5-es.html
+++ b/en/drafts/noticia5-es.html
@@ -97,7 +97,7 @@
   
 		<!-- Item introtext -->
 		<div class="texto_noticia">
-		 <p>Hace más de veinticinco años, el <a href="#">fotógrafo Gervasio Sánchez</a> comenzó a documentar los efectos de las minas antipersona en la población de lugares con conflictos bélicos. Se trata de un trabajo periodístico que ha ido desarrollando durante un cuarto de siglo, adentrándose con empatía en las vidas de sus protagonistas. El resultado es el libro 'Vidas minadas. 25 años', obra que se presentó en la UCO y que vendrá rubricada con una exposición en 2025. </p>
+		 <p>hola</p>
 	  </div>
     <div class="InfoAdd">
       <h3>ADITIONAL INFORMATION</h3>
