--- a/es/noticia4.html
+++ b/es/noticia4.html
@@ -189,6 +189,7 @@
       <h3>Artículos relacionados (por etiqueta)</h3>
           <ul>
                 <li><a href="https://davidvm29.github.io/pelican/es/noticia3.html">Los rectores andaluces abordan el nuevo mapa de titulaciones y piden igualdad respecto a las universidades privadas</a></li>
+                <li><a href="https://davidvm29.github.io/pelican/es/noticia5.html">La Universidad de Córdoba, entre las 800 mejores universidades del mundo según el último ranking THE</a></li>
           </ul>
       
    </div>
@@ -196,7 +197,7 @@
     <div class="itemNavigation">
         <span class="itemNavigationTitle">Más en esta categoría:</span>
             <a href="https://davidvm29.github.io/pelican/es/noticia3.html">Los rectores andaluces abordan el nuevo mapa de titulaciones y piden igualdad respecto a las universidades privadas</a>
-            <a href="https://davidvm29.github.io/pelican/es/noticia5.html">"#LaUCOenAbierto I Luz de las vidas minadas"</a>
+            <a href="https://davidvm29.github.io/pelican/es/noticia5.html">La Universidad de Córdoba, entre las 800 mejores universidades del mundo según el último ranking THE</a>
             <a href="https://davidvm29.github.io/pelican/es/noticia6.html">Sara Muñoz Porras, reelegida presidenta del Consejo de Estudiantes de la UCO (CEUCO)</a>
     </div>
 
@@ -331,7 +332,7 @@ Ayudas financiadas por las subvenciones del Ministerio...</div>
   </footer> 
 
   <script>
-    var calendarLinks = JSON.parse('{"2023-11-24": ["noticia6.html", "Sara Mu\u00f1oz Porras, reelegida presidenta del Consejo de Estudiantes de la UCO (CEUCO)", "Viernes, 24 Noviembre 2023 09:39", "Actualidad Universitaria"], "2024-02-12": ["noticia4.html", "La Universidad de C\u00f3rdoba, entre las 800 mejores universidades del mundo seg\u00fan el \u00faltimo ranking THE", "Martes, 12 febrero 2024 09:21", "Actualidad Universitaria", "noticia5.html", "\"#LaUCOenAbierto I Luz de las vidas minadas\"", "Jueves, 12 Febrero 2024 09:22", "Reportajes"], "2024-02-27": ["noticia3.html", "Los rectores andaluces abordan el nuevo mapa de titulaciones y piden igualdad respecto a las universidades privadas", "Martes, 12 febrero 2024 13:07", "Actualidad Universitaria"]}'.replace(/&quot;/g, '"'));
+    var calendarLinks = JSON.parse('{"2023-11-24": ["noticia6.html", "Sara Mu\u00f1oz Porras, reelegida presidenta del Consejo de Estudiantes de la UCO (CEUCO)", "Viernes, 24 Noviembre 2023 09:39", "Actualidad Universitaria"], "2024-02-12": ["noticia4.html", "La Universidad de C\u00f3rdoba, entre las 800 mejores universidades del mundo seg\u00fan el \u00faltimo ranking THE", "Martes, 12 febrero 2024 09:21", "Actualidad Universitaria", "noticia5.html", "La Universidad de C\u00f3rdoba, entre las 800 mejores universidades del mundo seg\u00fan el \u00faltimo ranking THE", "Martes, 12 febrero 2024 09:21", "Actualidad Universitaria"], "2024-02-27": ["noticia3.html", "Los rectores andaluces abordan el nuevo mapa de titulaciones y piden igualdad respecto a las universidades privadas", "Martes, 12 febrero 2024 13:07", "Actualidad Universitaria"]}'.replace(/&quot;/g, '"'));
     var idioma= 'es'
   </script>
 
