Generate Pelican site

--- a/es/archives.html
+++ b/es/archives.html
@@ -31,6 +31,8 @@
     <dd><a href="https://davidvm29.github.io/pelican/es/noticia3.html">noticia3</a></dd>
     <dt>lu. 12 febrero 2024</dt>
     <dd><a href="https://davidvm29.github.io/pelican/es/noticia4.html">noticia4</a></dd>
+    <dt>lu. 12 febrero 2024</dt>
+    <dd><a href="https://davidvm29.github.io/pelican/es/noticia5.html">noticia5</a></dd>
     <dt>vi. 24 noviembre 2023</dt>
     <dd><a href="https://davidvm29.github.io/pelican/es/noticia6.html">noticia6</a></dd>
 </dl>
