--- a/es/index.html
+++ b/es/index.html
@@ -301,12 +301,12 @@
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
           <figure>
               <!-- Comprobación del idioma y ajuste de la URL -->
-              <a href="https://davidvm29.github.io/pelican/es/noticia3.html">
-                  <img src="https://davidvm29.github.io/pelican/es/theme/images/noticia3.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
+              <a href="https://davidvm29.github.io/pelican/es/noticia5.html">
+                  <img src="https://davidvm29.github.io/pelican/es/theme/images/noticia4.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
               </a>
               <figcaption class="image-caption text-left">
-                  <a style="color: #575756;" href="https://davidvm29.github.io/pelican/es/noticia3.html">
-                      Los rectores andaluces abordan el nuevo mapa de titulaciones y piden igualdad respecto a las universidades privadas
+                  <a style="color: #575756;" href="https://davidvm29.github.io/pelican/es/noticia5.html">
+                      La Universidad de Córdoba, entre las 800 mejores universidades del mundo según el último ranking THE
                   </a>
               </figcaption>
           </figure>
@@ -314,12 +314,12 @@
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
           <figure>
               <!-- Comprobación del idioma y ajuste de la URL -->
-              <a href="https://davidvm29.github.io/pelican/es/noticiasfiltradas.html">
-                  <img src="https://davidvm29.github.io/pelican/es" alt="" class="img-fluid custom-img" style="width: 280px; height: 152px;">
+              <a href="https://davidvm29.github.io/pelican/es/noticia3.html">
+                  <img src="https://davidvm29.github.io/pelican/es/theme/images/noticia3.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
               </a>
               <figcaption class="image-caption text-left">
-                  <a style="color: #575756;" href="https://davidvm29.github.io/pelican/es/noticiasfiltradas.html">
-                      
+                  <a style="color: #575756;" href="https://davidvm29.github.io/pelican/es/noticia3.html">
+                      Los rectores andaluces abordan el nuevo mapa de titulaciones y piden igualdad respecto a las universidades privadas
                   </a>
               </figcaption>
           </figure>
