--- a/noticia5.html
+++ b/noticia5.html
@@ -97,59 +97,7 @@
   
 		<!-- Item introtext -->
 		<div class="texto_noticia">
-		 <h3>En la última edición del  ranking, la UCO mejora su clasificación, pasando del puesto 772 al 744. A nivel nacional se sitúa en el puesto 16 y continúa siendo la segunda de Andalucía.</h3>
-<p>La Universidad de Córdoba mantiene su posición entre las 800 mejores universidades del mundo, según la última edición del <a href="">Ranking THE (Times Higher Education World University Ranking)</a>. La UCO, aunque continúa en el rango de las 600-801 mejores universidades, mejora su clasificación y pasa del puesto 772 al 744, subiendo 28 posiciones. A nivel nacional, la Universidad de Córdoba se sitúa en el puesto 16 de 60 universidades españolas. Continúa siendo la segunda de Andalucía.</p>
-<p>El Ranking THE, uno de los más prestigiosos internacionalmente, lista un total de 1.904 universidades de 108 países y mide, a través de 18 indicadores, el entorno de aprendizaje, el entorno de la investigación, la calidad de la investigación, la perspectiva internacional y la industria. Estos 5 grupos de indicadores definen a través de encuestas, datos capturados de las universidades y proveedores de información científica como Scopus el conjunto de aspectos que mejor definen según su metodología las características comunes de las universidades del mundo.</p>
-<p>A nivel mundial, la UCO asciende posiciones en esta época post-covid donde los trabajos de investigación sufrieron gravemente la pandemia.</p>
-<table>
-<thead>
-<tr>
-<th>World University Ranking 2023</th>
-<th>España</th>
-<th>Andalucía</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>744/1904</td>
-<td>16/60</td>
-<td>2/8</td>
-</tr>
-</tbody>
-</table>
-<p>Este posicionamiento se debe al crecimiento, en general, de los indicadores mencionados, subiendo puntuaciones en cuatro de los cinco analizados y pasando de una puntuación final de 34,34 en el ranking 2023 a 38,11 en este último ranking 2024 (un 11%).</p>
-<p><strong>Puntuaciones por grupos de indicadores</strong></p>
-<table>
-<thead>
-<tr>
-<th></th>
-<th>Teaching</th>
-<th>Research Environment</th>
-<th>Research Quality</th>
-<th>Industry Income</th>
-<th>International Outlook</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>2023</td>
-<td>22,7</td>
-<td>21,2</td>
-<td>56,0</td>
-<td>39,4</td>
-<td>47,5</td>
-</tr>
-<tr>
-<td>2024</td>
-<td>27,0</td>
-<td>19,9</td>
-<td>62,6</td>
-<td>41,9</td>
-<td>52,3</td>
-</tr>
-</tbody>
-</table>
-<p>La salud investigadora y docente de la Universidad de Córdoba sigue teniendo repercusión en los rankings internacionales pese al difícil periodo pasado. En un momento en el que la situación mundial en todos los sentidos empieza a recuperar inercia, la actividad investigadora empieza a dar señas del esfuerzo del personal investigador de la Universidad de Córdoba.</p>
+		 <p>Hace más de veinticinco años, el <a href="#">fotógrafo Gervasio Sánchez</a> comenzó a documentar los efectos de las minas antipersona en la población de lugares con conflictos bélicos. Se trata de un trabajo periodístico que ha ido desarrollando durante un cuarto de siglo, adentrándose con empatía en las vidas de sus protagonistas. El resultado es el libro 'Vidas minadas. 25 años', obra que se presentó en la UCO y que vendrá rubricada con una exposición en 2025. </p>
 	  </div>
     <div class="InfoAdd">
       <h3>INFORMACIÓN ADICIONAL</h3>
@@ -163,11 +111,10 @@
 
       <div class="share-links">
         <p>Comparte en:</p>
-        <a href="mailto:?subject=La Universidad de Córdoba, entre las 800 mejores universidades del mundo según el último ranking THE&body=Echale un vistazo a la siguiente noticia: https://davidvm29.github.io/pelican/noticia4.html" title="Compartir en Email" class="icono-compartir"><i class="fas fa-envelope"></i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://davidvm29.github.io/pelican/noticia4.html" title="Compartir en Facebook" target="_blank" class="icono-compartir"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://twitter.com/intent/tweet?url=https://davidvm29.github.io/pelican/noticia4.html&text=La Universidad de Córdoba, entre las 800 mejores universidades del mundo según el último ranking THE" title="Compartir en Twitter" target="_blank" class="icono-compartir"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://davidvm29.github.io/pelican/noticia4.html&title=La Universidad de Córdoba, entre las 800 mejores universidades del mundo según el último ranking THE&summary=<h3>En la última edición del  ranking, la UCO mejora su clasificación, pasando del puesto 772 al 744. A nivel nacional se sitúa en el puesto 16 y continúa siendo la segunda de Andalucía.</h3>
-<p>La Universidad de Córdoba mantiene su posición entre las 800 mejores universidades del mundo, según la última …</p>&source=ucoPelican" title="Compartir en LinkedIn" target="_blank" class="icono-compartir"><i class="fab fa-linkedin-in"></i></a>
+        <a href="mailto:?subject=La Universidad de Córdoba, entre las 800 mejores universidades del mundo según el último ranking THE&body=Echale un vistazo a la siguiente noticia: https://davidvm29.github.io/pelican/noticia5.html" title="Compartir en Email" class="icono-compartir"><i class="fas fa-envelope"></i></a>
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://davidvm29.github.io/pelican/noticia5.html" title="Compartir en Facebook" target="_blank" class="icono-compartir"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://twitter.com/intent/tweet?url=https://davidvm29.github.io/pelican/noticia5.html&text=La Universidad de Córdoba, entre las 800 mejores universidades del mundo según el último ranking THE" title="Compartir en Twitter" target="_blank" class="icono-compartir"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://davidvm29.github.io/pelican/noticia5.html&title=La Universidad de Córdoba, entre las 800 mejores universidades del mundo según el último ranking THE&summary=<p>Hace más de veinticinco años, el <a href="#">fotógrafo Gervasio Sánchez</a> comenzó a documentar los efectos de las minas antipersona en la población de lugares con conflictos bélicos. Se trata de un trabajo periodístico que ha ido desarrollando durante un cuarto de siglo, adentrándose con empatía en las vidas de sus protagonistas …</p>&source=ucoPelican" title="Compartir en LinkedIn" target="_blank" class="icono-compartir"><i class="fab fa-linkedin-in"></i></a>
       </div>
 
   <div style="margin-bottom: 20px;"class="hastag">
@@ -189,7 +136,7 @@
       <h3>Artículos relacionados (por etiqueta)</h3>
           <ul>
                 <li><a href="https://davidvm29.github.io/pelican/noticia3.html">Los rectores andaluces abordan el nuevo mapa de titulaciones y piden igualdad respecto a las universidades privadas</a></li>
-                <li><a href="https://davidvm29.github.io/pelican/noticia5.html">La Universidad de Córdoba, entre las 800 mejores universidades del mundo según el último ranking THE</a></li>
+                <li><a href="https://davidvm29.github.io/pelican/noticia4.html">La Universidad de Córdoba, entre las 800 mejores universidades del mundo según el último ranking THE</a></li>
           </ul>
       
    </div>
@@ -197,7 +144,7 @@
     <div class="itemNavigation">
         <span class="itemNavigationTitle">Más en esta categoría:</span>
             <a href="https://davidvm29.github.io/pelican/noticia3.html">Los rectores andaluces abordan el nuevo mapa de titulaciones y piden igualdad respecto a las universidades privadas</a>
-            <a href="https://davidvm29.github.io/pelican/noticia5.html">La Universidad de Córdoba, entre las 800 mejores universidades del mundo según el último ranking THE</a>
+            <a href="https://davidvm29.github.io/pelican/noticia4.html">La Universidad de Córdoba, entre las 800 mejores universidades del mundo según el último ranking THE</a>
             <a href="https://davidvm29.github.io/pelican/noticia6.html">Sara Muñoz Porras, reelegida presidenta del Consejo de Estudiantes de la UCO (CEUCO)</a>
     </div>
 
