--- a/en/noticia5-en.html
+++ b/en/noticia5-en.html
@@ -114,7 +114,7 @@
         <a href="mailto:?subject=#LaUCOenAbierto I Light of mined lives&body=Echale un vistazo a la siguiente noticia: https://davidvm29.github.io/pelican/en/noticia5-en.html" title="Compartir en Email" class="icono-compartir"><i class="fas fa-envelope"></i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://davidvm29.github.io/pelican/en/noticia5-en.html" title="Compartir en Facebook" target="_blank" class="icono-compartir"><i class="fab fa-facebook-f"></i></a>
         <a href="https://twitter.com/intent/tweet?url=https://davidvm29.github.io/pelican/en/noticia5-en.html&text=#LaUCOenAbierto I Light of mined lives" title="Compartir en Twitter" target="_blank" class="icono-compartir"><i class="fab fa-twitter"></i></a>
-        <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://davidvm29.github.io/pelican/en/noticia5-en.html&title=#LaUCOenAbierto I Light of mined lives&summary=<p>More than twenty-five years ago, <a href="#">photographer Gervasio Sánchez</a> began documenting the effects of landmines on the population of places with war conflicts. It is a journalistic work that he has been developing for a quarter of a century, entering with empathy into the lives of its protagonists. The result is …</p>&source=My site" title="Compartir en LinkedIn" target="_blank" class="icono-compartir"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://davidvm29.github.io/pelican/en/noticia5-en.html&title=#LaUCOenAbierto I Light of mined lives" title="Compartir en LinkedIn" target="_blank" class="icono-compartir"><i class="fab fa-linkedin-in"></i></a>
       </div>
 
   <div style="margin-bottom: 20px;"class="hastag">
