Generate Pelican site

--- a/es/archives.html
+++ b/es/archives.html
@@ -19,6 +19,8 @@
 <h2>Archives for Mi Sitio</h2>
 
 <dl>
+    <dt>lu. 17 junio 2024</dt>
+    <dd><a href="https://davidvm29.github.io/pelican/es/noticia7.html">noticia7</a></dd>
     <dt>sá. 09 marzo 2024</dt>
     <dd><a href="https://davidvm29.github.io/pelican/es/noticiasfiltradas.html">noticiasFiltradas</a></dd>
     <dt>sá. 09 marzo 2024</dt>
