--- a/index.html
+++ b/index.html
@@ -275,6 +275,19 @@
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
           <figure>
               <!-- Comprobación del idioma y ajuste de la URL -->
+              <a href="https://davidvm29.github.io/pelican/noticia7.html">
+                  <img src="https://davidvm29.github.io/pelican/theme/images/noticia6.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
+              </a>
+              <figcaption class="image-caption text-left">
+                  <a style="color: #575756;" href="https://davidvm29.github.io/pelican/noticia7.html">
+                      prueba
+                  </a>
+              </figcaption>
+          </figure>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
+          <figure>
+              <!-- Comprobación del idioma y ajuste de la URL -->
               <a href="https://davidvm29.github.io/pelican/noticia6.html">
                   <img src="https://davidvm29.github.io/pelican/theme/images/noticia6.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
               </a>
@@ -307,19 +320,6 @@
               <figcaption class="image-caption text-left">
                   <a style="color: #575756;" href="https://davidvm29.github.io/pelican/noticia3.html">
                       Los rectores andaluces abordan el nuevo mapa de titulaciones y piden igualdad respecto a las universidades privadas
-                  </a>
-              </figcaption>
-          </figure>
-      </div>
-      <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
-          <figure>
-              <!-- Comprobación del idioma y ajuste de la URL -->
-              <a href="https://davidvm29.github.io/pelican/noticia5.html">
-                  <img src="https://davidvm29.github.io/pelican/theme/images/noticia5.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
-              </a>
-              <figcaption class="image-caption text-left">
-                  <a style="color: #575756;" href="https://davidvm29.github.io/pelican/noticia5.html">
-                      #LaUCOenAbierto I Luz de las vidas minadas
                   </a>
               </figcaption>
           </figure>
@@ -387,6 +387,7 @@
 <script>
   var idioma = 'es'
   var SITEURL = 'https://davidvm29.github.io/pelican'
+  var PELICAN = '/pelican/'
 </script>
 <script src="https://davidvm29.github.io/pelican/theme/js/script.js"></script>
 <script src="https://davidvm29.github.io/pelican/theme/js/search.js" type="text/javascript"></script>
