--- a/resultadosbusqueda.html
+++ b/resultadosbusqueda.html
@@ -280,6 +280,7 @@
 <script>
   var idioma = 'es'
   var SITEURL = 'https://davidvm29.github.io/pelican'
+  var PELICAN = '/pelican/'
 </script>
 
 <script src="https://davidvm29.github.io/pelican/theme/js/script.js"></script>
