--- a/en/drafts/resultadosbusqueda-es.html
+++ b/en/drafts/resultadosbusqueda-es.html
@@ -280,6 +280,7 @@
 <script>
   var idioma = 'es'
   var SITEURL = 'https://davidvm29.github.io/pelican/en'
+  var PELICAN = '/pelican/'
 </script>
 
 <script src="https://davidvm29.github.io/pelican/en/theme/js/script.js"></script>
