--- a/en/historia-en.html
+++ b/en/historia-en.html
@@ -177,6 +177,7 @@
 <script>
     var idioma = 'en'
     var SITEURL = 'https://davidvm29.github.io/pelican/en'
+    var PELICAN = '/pelican/'
 </script>
 <script src="https://davidvm29.github.io/pelican/en/theme/js/script.js"></script>
 <script src="https://davidvm29.github.io/pelican/en/theme/js/search.js" type="text/javascript"></script>
