--- a/en/index.html
+++ b/en/index.html
@@ -275,6 +275,19 @@
       <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
           <figure>
               <!-- Comprobación del idioma y ajuste de la URL -->
+              <a href="https://davidvm29.github.io/pelican/en/noticia7-en.html">
+                  <img src="https://davidvm29.github.io/pelican/en/theme/images/noticia6.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
+              </a>
+              <figcaption class="image-caption text-left">
+                  <a style="color: #575756;" href="https://davidvm29.github.io/pelican/en/noticia7-en.html">
+                      prueba ingles
+                  </a>
+              </figcaption>
+          </figure>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
+          <figure>
+              <!-- Comprobación del idioma y ajuste de la URL -->
               <a href="https://davidvm29.github.io/pelican/en/noticia6-en.html">
                   <img src="https://davidvm29.github.io/pelican/en/theme/images/noticia6.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
               </a>
@@ -307,19 +320,6 @@
               <figcaption class="image-caption text-left">
                   <a style="color: #575756;" href="https://davidvm29.github.io/pelican/en/noticia3-en.html">
                       The Andalusian rectors address the new degree map and ask for equality with respect to private universities
-                  </a>
-              </figcaption>
-          </figure>
-      </div>
-      <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 custom-col">
-          <figure>
-              <!-- Comprobación del idioma y ajuste de la URL -->
-              <a href="https://davidvm29.github.io/pelican/en/noticia5-en.html">
-                  <img src="https://davidvm29.github.io/pelican/en/theme/images/noticia5.jpg" alt=""Descripción de la imagen 1"" class="img-fluid custom-img" style="width: 280px; height: 152px;">
-              </a>
-              <figcaption class="image-caption text-left">
-                  <a style="color: #575756;" href="https://davidvm29.github.io/pelican/en/noticia5-en.html">
-                      #LaUCOenAbierto I Light of mined lives
                   </a>
               </figcaption>
           </figure>
@@ -387,6 +387,7 @@
 <script>
   var idioma = 'en'
   var SITEURL = 'https://davidvm29.github.io/pelican/en'
+  var PELICAN = '/pelican/'
 </script>
 <script src="https://davidvm29.github.io/pelican/en/theme/js/script.js"></script>
 <script src="https://davidvm29.github.io/pelican/en/theme/js/search.js" type="text/javascript"></script>
