Generate Pelican site

--- a/drafts/resultadosbusqueda-en-en.html
+++ b/drafts/resultadosbusqueda-en-en.html
@@ -283,8 +283,8 @@
   var PELICAN = '/pelican/'
 </script>
 
-<script src="https://davidvm29.github.io/pelican/theme/js/script.js"></script>
-<script src="https://davidvm29.github.io/pelican/theme/js/search.js" type="text/javascript"></script>
-<script src="https://davidvm29.github.io/pelican/theme/js/enlacesBusqueda.js"></script>
+<script src="/theme/js/script.js"></script>
+<script src="/theme/js/search.js" type="text/javascript"></script>
+<script src="/theme/js/enlacesBusqueda.js"></script>
 </body>
 </html>
