--- a/en/index.html
+++ b/en/index.html
@@ -27,7 +27,7 @@
 							<input type="text" size="10" placeholder="" name="q" id="searchInput">
 							<input type="button" value="Search" class="btn-buscar" id="searchButton" onclick="buscarYRedirigir('en')">
 					</div>
-          <!-- <div id="searchResults" class="nav justify-content-center"></div> -->
+          <div id="searchResults" class="nav justify-content-center"></div>
 				</div>
 
   <!-- Botones de enlace a páginas externas -->
@@ -389,7 +389,7 @@
   var SITEURL = 'https://davidvm29.github.io/pelican/en'
   var PELICAN = '/pelican/'
 </script>
-<script src="https://davidvm29.github.io/pelican/en/theme/js/script.js"></script>
-<script src="https://davidvm29.github.io/pelican/en/theme/js/search.js" type="text/javascript"></script>
+<script src="/theme/js/script.js"></script>
+<script src="/theme/js/search.js" type="text/javascript"></script>
 </body>
 </html>
