--- a/noticia7.html
+++ b/noticia7.html
@@ -289,9 +289,9 @@ Ayudas financiadas por las subvenciones del Ministerio...</div>
   var SITEURL = 'https://davidvm29.github.io/pelican'
   var PELICAN = '/pelican/'
 </script>
-<script src="https://davidvm29.github.io/pelican/theme/js/script.js"></script>
-<script src="https://davidvm29.github.io/pelican/theme/js/calendar.js"></script>
-<script src="https://davidvm29.github.io/pelican/theme/js/search.js" type="text/javascript"></script>
+<script src="/theme/js/script.js"></script>
+<script src="/theme/js/calendar.js"></script>
+<script src="/theme/js/search.js" type="text/javascript"></script>
 
 </html>
   
