--- a/es/drafts/noticia4-en-en.html
+++ b/es/drafts/noticia4-en-en.html
@@ -278,9 +278,9 @@ Ayudas financiadas por las subvenciones del Ministerio...</div>
   var SITEURL = 'https://davidvm29.github.io/pelican/es'
   var PELICAN = '/pelican/'
 </script>
-<script src="https://davidvm29.github.io/pelican/es/theme/js/script.js"></script>
-<script src="https://davidvm29.github.io/pelican/es/theme/js/calendar.js"></script>
-<script src="https://davidvm29.github.io/pelican/es/theme/js/search.js" type="text/javascript"></script>
+<script src="/theme/js/script.js"></script>
+<script src="/theme/js/calendar.js"></script>
+<script src="/theme/js/search.js" type="text/javascript"></script>
 
 </html>
   
