--- a/historia.html
+++ b/historia.html
@@ -179,6 +179,6 @@
     var SITEURL = 'https://davidvm29.github.io/pelican'
     var PELICAN = '/pelican/'
 </script>
-<script src="https://davidvm29.github.io/pelican/theme/js/script.js"></script>
-<script src="https://davidvm29.github.io/pelican/theme/js/search.js" type="text/javascript"></script>
+<script src="/theme/js/script.js"></script>
+<script src="/theme/js/search.js" type="text/javascript"></script>
 </html>
