Generate Pelican site

--- a/en/drafts/resultadosbusqueda-es.html
+++ b/en/drafts/resultadosbusqueda-es.html
@@ -282,9 +282,10 @@
   var SITEURL = 'https://davidvm29.github.io/pelican/en'
   var PELICAN = '/pelican/'
 </script>
-
 <script src="/theme/js/script.js"></script>
-<script src="/theme/js/search.js" type="text/javascript"></script>
+<script src="/theme/js/search.js"></script>
+<script src="/theme/js/calendar.js"></script>
+<script src="/theme/js/noticiasFiltradas.js"></script>
 <script src="/theme/js/enlacesBusqueda.js"></script>
 </body>
 </html>
