--- a/en/drafts/noticia7-es.html
+++ b/en/drafts/noticia7-es.html
@@ -273,8 +273,8 @@ Aid financed by grants from the Ministry...</div>
   var PELICAN = '/pelican/'
 </script>
 <script src="/theme/js/script.js"></script>
+<script src="/theme/js/search.js"></script>
 <script src="/theme/js/calendar.js"></script>
-<script src="/theme/js/search.js" type="text/javascript"></script>
 
 </html>
   
