--- a/en/index.html
+++ b/en/index.html
@@ -390,6 +390,6 @@
   var PELICAN = '/pelican/'
 </script>
 <script src="/theme/js/script.js"></script>
-<script src="/theme/js/search.js" type="text/javascript"></script>
+<script src="/theme/js/search.js"></script>
 </body>
 </html>
