--- a/en/noticiasfiltradas-en.html
+++ b/en/noticiasfiltradas-en.html
@@ -214,9 +214,9 @@ Aid financed by grants from the Ministry...            </div>
     var PELICAN = '/pelican/'
 </script>
 
-<script src="https://davidvm29.github.io/pelican/en/theme/js/script.js"></script>
-<script src="https://davidvm29.github.io/pelican/en/theme/js/calendar.js"></script>
-<script src="https://davidvm29.github.io/pelican/en/theme/js/noticiasFiltradas.js"></script>
-<script src="https://davidvm29.github.io/pelican/en/theme/js/search.js" type="text/javascript"></script>
+<script src="/theme/js/script.js"></script>
+<script src="/theme/js/search.js"></script>
+<script src="/theme/js/calendar.js"></script>
+<script src="/theme/js/noticiasFiltradas.js"></script>
 
 </html>
