--- a/es/historia.html
+++ b/es/historia.html
@@ -180,5 +180,5 @@
     var PELICAN = '/pelican/'
 </script>
 <script src="/theme/js/script.js"></script>
-<script src="/theme/js/search.js" type="text/javascript"></script>
+<script src="/theme/js/search.js"></script>
 </html>
