--- a/noticia5.html
+++ b/noticia5.html
@@ -287,8 +287,8 @@ Ayudas financiadas por las subvenciones del Ministerio...</div>
   var PELICAN = '/pelican/'
 </script>
 <script src="/theme/js/script.js"></script>
+<script src="/theme/js/search.js"></script>
 <script src="/theme/js/calendar.js"></script>
-<script src="/theme/js/search.js" type="text/javascript"></script>
 
 </html>
   
