--- a/noticiasfiltradas.html
+++ b/noticiasfiltradas.html
@@ -214,9 +214,9 @@ Ayudas financiadas por las subvenciones del Ministerio...            </div>
     var PELICAN = '/pelican/'
 </script>
 
-<script src="https://davidvm29.github.io/pelican/theme/js/script.js"></script>
-<script src="https://davidvm29.github.io/pelican/theme/js/calendar.js"></script>
-<script src="https://davidvm29.github.io/pelican/theme/js/noticiasFiltradas.js"></script>
-<script src="https://davidvm29.github.io/pelican/theme/js/search.js" type="text/javascript"></script>
+<script src="/theme/js/script.js"></script>
+<script src="/theme/js/search.js"></script>
+<script src="/theme/js/calendar.js"></script>
+<script src="/theme/js/noticiasFiltradas.js"></script>
 
 </html>
