Generate Pelican site

--- a/en/drafts/noticia4-es.html
+++ b/en/drafts/noticia4-es.html
@@ -278,9 +278,9 @@ Aid financed by grants from the Ministry...</div>
   var SITEURL = 'https://davidvm29.github.io/pelican/en'
   var PELICAN = '/pelican/'
 </script>
-<script src="/theme/js/script.js"></script>
-<script src="/theme/js/search.js"></script>
-<script src="/theme/js/calendar.js"></script>
+<script src="https://davidvm29.github.io/pelican/en/theme/js/script.js"></script>
+<script src="https://davidvm29.github.io/pelican/en/theme/js/search.js"></script>
+<script src="https://davidvm29.github.io/pelican/en/theme/js/calendar.js"></script>
 
 </html>
   
