--- a/es/drafts/noticiasfiltradas-en-en.html
+++ b/es/drafts/noticiasfiltradas-en-en.html
@@ -214,9 +214,9 @@ Ayudas financiadas por las subvenciones del Ministerio...            </div>
     var PELICAN = '/pelican/'
 </script>
 
-<script src="/theme/js/script.js"></script>
-<script src="/theme/js/search.js"></script>
-<script src="/theme/js/calendar.js"></script>
-<script src="/theme/js/noticiasFiltradas.js"></script>
+<script src="https://davidvm29.github.io/pelican/es/theme/js/script.js"></script>
+<script src="https://davidvm29.github.io/pelican/es/theme/js/search.js"></script>
+<script src="https://davidvm29.github.io/pelican/es/theme/js/calendar.js"></script>
+<script src="https://davidvm29.github.io/pelican/es/theme/js/noticiasFiltradas.js"></script>
 
 </html>
