--- a/es/drafts/resultadosbusqueda-en-en.html
+++ b/es/drafts/resultadosbusqueda-en-en.html
@@ -282,10 +282,8 @@
   var SITEURL = 'https://davidvm29.github.io/pelican/es'
   var PELICAN = '/pelican/'
 </script>
-<script src="/theme/js/script.js"></script>
-<script src="/theme/js/search.js"></script>
-<script src="/theme/js/calendar.js"></script>
-<script src="/theme/js/noticiasFiltradas.js"></script>
-<script src="/theme/js/enlacesBusqueda.js"></script>
+<script src="https://davidvm29.github.io/pelican/es/theme/js/script.js"></script>
+<script src="https://davidvm29.github.io/pelican/es/theme/js/search.js"></script>
+<script src="https://davidvm29.github.io/pelican/es/theme/js/enlacesBusqueda.js"></script>
 </body>
 </html>
