--- a/es/index.html
+++ b/es/index.html
@@ -389,7 +389,7 @@
   var SITEURL = 'https://davidvm29.github.io/pelican/es'
   var PELICAN = '/pelican/'
 </script>
-<script src="/theme/js/script.js"></script>
-<script src="/theme/js/search.js"></script>
+<script src="https://davidvm29.github.io/pelican/es/theme/js/script.js"></script>
+<script src="https://davidvm29.github.io/pelican/es/theme/js/search.js"></script>
 </body>
 </html>
