Generate Pelican site

--- a/drafts/noticia3-en-en.html
+++ b/drafts/noticia3-en-en.html
@@ -277,7 +277,7 @@ Ayudas financiadas por las subvenciones del Ministerio...</div>
 <script>
   var idioma = 'en'
   var SITEURL = 'https://davidvm29.github.io/pelican'
-  var PELICAN = '/pelican/'
+  var PELICAN = '/pelican'
 </script>
 <script src="https://davidvm29.github.io/pelican/theme/js/script.js"></script>
 <script src="https://davidvm29.github.io/pelican/theme/js/search.js"></script>
