--- a/en/noticiasfiltradas-en.html
+++ b/en/noticiasfiltradas-en.html
@@ -211,7 +211,7 @@ Aid financed by grants from the Ministry...            </div>
     var calendarLinks = JSON.parse('{"2023-11-24": ["en/noticia6-en.html", "Sara Mu\u00f1oz Porras, re-elected president of the UCO Student Council (CEUCO)", "Friday, November 24, 2023 09:39", "University News"], "2024-02-12": ["en/noticia4-en.html", "The University of C\u00f3rdoba, among the 800 best universities in the world according to the latest THE ranking", "Tuesday, February 12, 2024 09:21", "University News", "en/noticia5-en.html", "#LaUCOenAbierto I Light of mined lives", "Thursday, 12 February 2024 09:22", "Reports"], "2024-02-27": ["en/noticia3-en.html", "The Andalusian rectors address the new degree map and ask for equality with respect to private universities", "Tuesday, February 12, 2024 1:07 p.m.", "University News"], "2024-06-17": ["en/noticia7-en.html", "prueba ingles", "Friday, November 24, 2023 09:39", "University News"]}'.replace(/&quot;/g, '"'));
     var idioma = 'en';
     var SITEURL = 'https://davidvm29.github.io/pelican/en'
-    var PELICAN = '/pelican/'
+    var PELICAN = '/pelican'
 </script>
 
 <script src="https://davidvm29.github.io/pelican/en/theme/js/script.js"></script>
