--- a/en/resultadosbusqueda-en.html
+++ b/en/resultadosbusqueda-en.html
@@ -280,7 +280,7 @@
 <script>
   var idioma = 'en'
   var SITEURL = 'https://davidvm29.github.io/pelican/en'
-  var PELICAN = '/pelican/'
+  var PELICAN = '/pelican'
 </script>
 <script src="https://davidvm29.github.io/pelican/en/theme/js/script.js"></script>
 <script src="https://davidvm29.github.io/pelican/en/theme/js/search.js"></script>
