Generate Pelican site

--- a/en/index.html
+++ b/en/index.html
@@ -27,7 +27,7 @@
 							<input type="text" size="10" placeholder="" name="q" id="searchInput">
 							<input type="button" value="Search" class="btn-buscar" id="searchButton" onclick="buscarYRedirigir('en')">
 					</div>
-          <div id="searchResults" class="nav justify-content-center"></div>
+          <!-- <div id="searchResults" class="nav justify-content-center"></div> -->
 				</div>
 
   <!-- Botones de enlace a páginas externas -->
