Generate Pelican site

--- a/es/noticia6.html
+++ b/es/noticia6.html
@@ -289,7 +289,7 @@ Ayudas financiadas por las subvenciones del Ministerio...</div>
 <script>
   var idioma = 'es'
   var SITEURL = 'https://davidvm29.github.io/pelican/es'
-  var PELICAN = '/pelican'
+  var PELICAN = '/pelican/'
 </script>
 <script src="https://davidvm29.github.io/pelican/es/theme/js/script.js"></script>
 <script src="https://davidvm29.github.io/pelican/es/theme/js/search.js"></script>
