--- a/drafts/resultadosbusqueda-en-en.html
+++ b/drafts/resultadosbusqueda-en-en.html
@@ -280,7 +280,7 @@
 <script>
   var idioma = 'en'
   var SITEURL = 'https://davidvm29.github.io/pelican'
-  var PELICAN = '/pelican'
+  var PELICAN = '/pelican/'
 </script>
 <script src="https://davidvm29.github.io/pelican/theme/js/script.js"></script>
 <script src="https://davidvm29.github.io/pelican/theme/js/search.js"></script>
