--- a/en/drafts/noticia3-es.html
+++ b/en/drafts/noticia3-es.html
@@ -277,7 +277,7 @@ Aid financed by grants from the Ministry...</div>
 <script>
   var idioma = 'es'
   var SITEURL = 'https://davidvm29.github.io/pelican/en'
-  var PELICAN = '/pelican'
+  var PELICAN = '/pelican/'
 </script>
 <script src="https://davidvm29.github.io/pelican/en/theme/js/script.js"></script>
 <script src="https://davidvm29.github.io/pelican/en/theme/js/search.js"></script>
