--- a/en/drafts/resultadosbusqueda-es.html
+++ b/en/drafts/resultadosbusqueda-es.html
@@ -280,7 +280,7 @@
 <script>
   var idioma = 'es'
   var SITEURL = 'https://davidvm29.github.io/pelican/en'
-  var PELICAN = '/pelican'
+  var PELICAN = '/pelican/'
 </script>
 <script src="https://davidvm29.github.io/pelican/en/theme/js/script.js"></script>
 <script src="https://davidvm29.github.io/pelican/en/theme/js/search.js"></script>
